# DataExplorer

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  zoomablechart.h  zoomablechartview.h
.github/scripts/: package_linux.sh  package_msys.sh
.github/workflows/: cd.yml
resources/: DataExplorer.icns  dataexplorer-msys.nsi  dataexplorer.desktop  icons.qrc  win.rc
src/: abmarker.cpp  abmarker.h  callout.cpp  callout.h  horizontalmarker.cpp  horizontalmarker.h  mainwindow.cpp  mainwindow.h  rangelimitedvalueaxis.h  verticalmarker.cpp  verticalmarker.h  zoomablechart.h  zoomablechartview.cpp  zoomablechartview.h
tests/data/: db_test.csv  example.s2p  example.s4p  log.csv  quotes.csv  test.vcsv  test0.csv  test1.csv  test_quote.csv
